# django_celery_routing

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/: celery.py  settings.py  urls.py
semple/: apps.py  tasks.py  urls.py  views.py
