[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Taras Nytiaha", email = "taras.nytiaha@gmail.com"},
]
dependencies = [
    "django>=5.0",
    "celery>=5.3.6",
    "black>=23.11.0",
    "redis>=5.0.1",
    "ipython>=8.18.1",
    "django-environ>=0.11.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start.cmd = "python  manage.py runserver 0.0.0.0:5000"
helper.cmd = "celery -A core.celery worker -E   --loglevel=info -Q helper-queue"
general.cmd =  "celery -A core.celery worker  -E  --loglevel=info -Q general-queue"
email.cmd =  "celery -A core.celery worker -E  --loglevel=info -Q email-queue"
